# CPM-cli

./: .clang-format  .cpmrc  .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  cpm.c  cpm_package.spec  cpm_registry.db  package.json  registry_server.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs-enhancement.yml  docs-problem.yml
.github/workflows/: main_ci.yml
actions/create-check/: action.yml
actions/install-latest-cpm/: action.yml
actions/matchers/: tap.json
docs/: README.md
docs/design/: pmll-hardening.md  q-promises.md
docs/manual/: getting-started.md  installation.md
include/: cpm.h  cpm_config.h  cpm_deps.h  cpm_package.h  cpm_pmll.h  cpm_promise.h  cpm_semver.h  cpm_types.h
lib/commands/: help.c  init.c  install.c  publish.c  run_script.c  search.c
lib/core/: cpm_config.c  cpm_deps.c  cpm_event_loop.c  cpm_package.c  cpm_pmll.c  cpm_promise.c  cpm_promise_all.c  cpm_semver.c
src/: cpm.h  cpm_core.c  main.c
tests/: cpm_test.sh
tests/cpm_test_dir/: .gitignore  CMakeLists.txt  Makefile  README.md  cpm_package.spec
tests/cpm_test_dir/examples/: main.c
